# esp-thumbpads

./: .gitignore  flash_code  flash_fs  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble_hid_keyboard.cpp  ble_hid_keyboard.h  esp_now_common.h  hid_keycodes.cpp  hid_keycodes.h  idf_component.yml  keyboard_layout.cpp  keyboard_layout.h  thumbpads.cpp
main/fs/: .rdsp.cfg.kate-swp  keyboard.cfg  keyboard.md  ldsp.cfg  left.cfg  lkey4.cfg  lkey5.cfg  lmenu.cfg  lsreach.cfg  lsymbol.cfg  ltimber.cfg  menu.cfg  rdsp.cfg  right.cfg  rkey4.cfg  rkey5.cfg  rmenu.cfg  rsreach.cfg  rsymbol.cfg  rtimber.cfg
